tests/tests/legacy_kustomizations/centraldashboard/test_data/expected/apps_v1_deployment_centraldashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: centraldashboard
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/instance: centraldashboard-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: centraldashboard
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: centraldashboard
  name: centraldashboard
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centraldashboard
      app.kubernetes.io/component: centraldashboard
      app.kubernetes.io/instance: centraldashboard-v1.0.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: centraldashboard
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v1.0.0
      kustomize.component: centraldashboard
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: centraldashboard
        app.kubernetes.io/component: centraldashboard
        app.kubernetes.io/instance: centraldashboard-v1.0.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: centraldashboard
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v1.0.0
        kustomize.component: centraldashboard
    spec:
      containers:
      - env:
        - name: USERID_HEADER
          value: X-Goog-Authenticated-User-Email
        - name: USERID_PREFIX
          value: 'accounts.google.com:'
        - name: PROFILES_KFAM_SERVICE_HOST
          value: profiles-kfam.kubeflow
        - name: REGISTRATION_FLOW
          value: "true"
        - name: DASHBOARD_LINKS_CONFIGMAP
          value: centraldashboard-links-config
        image: uhub.service.ucloud.cn/a4x-kubeflow/kubeflow-images-public/centraldashboard:vmaster-g8097cfeb
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 30
        name: centraldashboard
        ports:
        - containerPort: 8082
          protocol: TCP
      serviceAccountName: centraldashboard
