tests/tests/legacy_kustomizations/centraldashboard/test_data/expected/rbac.authorization.k8s.io_v1_rolebinding_centraldashboard.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app: centraldashboard
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/instance: centraldashboard-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: centraldashboard
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: centraldashboard
  name: centraldashboard
  namespace: kubeflow
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: centraldashboard
subjects:
- kind: ServiceAccount
  name: centraldashboard
  namespace: $(namespace)
